# trading-projects

./: README.md
AI-Trading-Strategy/: README.md  ml_model.py
AI-Trading-Strategy/results/: signals.csv
AI-Trading-Strategy/sample_data/: AAPL.csv
FastAPI-Microservice/: Dockerfile  main.py  requirements.txt
HFT-System-CPP/: .gitignore  CMakeLists.txt  README.md
HFT-System-CPP/config/: hft_config.txt
HFT-System-CPP/docker/: Dockerfile  docker-compose.yml
HFT-System-CPP/include/core/: config.hpp  lock_free_queue.hpp  logger.hpp  memory_pool.hpp  timer.hpp
HFT-System-CPP/include/gateway/: exchange_gateway.hpp  fix_protocol.hpp
HFT-System-CPP/include/market_data/: market_data_handler.hpp  order_book.hpp
HFT-System-CPP/include/metrics/: latency_tracker.hpp  performance_monitor.hpp
HFT-System-CPP/include/oms/: order_manager.hpp  position_manager.hpp
HFT-System-CPP/include/risk/: risk_manager.hpp
HFT-System-CPP/include/strategy/: market_making_strategy.hpp  stat_arb_strategy.hpp  strategy_base.hpp
HFT-System-CPP/scripts/: build.sh  deploy.sh  run.sh
HFT-System-CPP/src/: main.cpp
HFT-System-CPP/src/core/: config.cpp  logger.cpp  memory_pool.cpp  timer.cpp
HFT-System-CPP/src/gateway/: exchange_gateway.cpp  fix_protocol.cpp
HFT-System-CPP/src/market_data/: market_data_handler.cpp  order_book.cpp
HFT-System-CPP/src/metrics/: latency_tracker.cpp  performance_monitor.cpp
HFT-System-CPP/src/oms/: order_manager.cpp  position_manager.cpp
HFT-System-CPP/src/risk/: risk_manager.cpp
HFT-System-CPP/src/strategy/: market_making_strategy.cpp  stat_arb_strategy.cpp  strategy_base.cpp
HFT-System-CPP/tests/: CMakeLists.txt  test_lock_free_queue.cpp  test_memory_pool.cpp  test_order_book.cpp
OrderBook-Engine/: README.md  orderbook.cpp
Pricing-Engine-Production/: .gitignore  README.md  build.sh
Pricing-Engine-Production/backend/: .env.example  main.py  pricing_models.py  requirements.txt  test_api.py
Pricing-Engine-Production/cpp/: CMakeLists.txt
Pricing-Engine-Production/cpp/include/: fixed_income_pricer.hpp  option_pricer.hpp
Pricing-Engine-Production/cpp/src/: fixed_income_pricer.cpp  option_pricer.cpp  python_bindings.cpp
Pricing-Engine-Production/cpp/tests/: test_option_pricing.cpp
Pricing-Engine-Production/deployment/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
Pricing-Engine-Production/frontend/: .env.example  index.html  package.json  vite.config.js
Pricing-Engine-Production/frontend/src/: App.jsx  index.css  main.jsx
Python-Automation-Framework/: README.md  deploy.py  test_service.py
cpp-interview-solutions/: CMakeLists.txt  INTERVIEW_GUIDE.md  README.md  build.sh
cpp-interview-solutions/01-advanced-cpp/: move_semantics.cpp  smart_pointers.cpp  templates_metaprogramming.cpp
cpp-interview-solutions/02-hft-datastructures/: lock_free_queue.cpp  order_book.cpp
cpp-interview-solutions/03-algorithms/: trading_algorithms.cpp
cpp-interview-solutions/04-design-patterns/: trading_patterns.cpp
cpp-interview-solutions/05-concurrency/: thread_pool.cpp
cpp-interview-solutions/06-system-design/: hft_system_design.md
cpp-interview-solutions/07-low-latency/: optimization_techniques.cpp
cpp-interview-solutions/08-trading-problems/: backtesting_engine.cpp
linux-system-programming-course/: README.md
linux-system-programming-course/01-file-io/: README.md
linux-system-programming-course/01-file-io/examples/: Makefile  file_copy.c  file_operations.c  log_manager.c  mmap_example.c
linux-system-programming-course/02-process-management/: README.md
linux-system-programming-course/02-process-management/examples/: Makefile  daemon_process.c  exec_demo.c  fork_basic.c  wait_demo.c
linux-system-programming-course/03-ipc/: README.md
linux-system-programming-course/03-ipc/examples/: Makefile  pipe_demo.c  shared_memory.c
linux-system-programming-course/04-signals/: README.md
linux-system-programming-course/04-signals/examples/: Makefile  signal_handler.c
linux-system-programming-course/05-threading/: README.md
linux-system-programming-course/05-threading/examples/: Makefile  thread_basic.c  thread_sync.c
linux-system-programming-course/06-network-programming/: README.md
linux-system-programming-course/06-network-programming/examples/: Makefile  tcp_client.c  tcp_server.c
linux-system-programming-course/07-linux-commands/: README.md
network-programming-course/: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  build.sh
network-programming-course/diagrams/: README.md
network-programming-course/module-01-fundamentals/: README.md
network-programming-course/module-02-socket-programming/: README.md
network-programming-course/module-02-socket-programming/examples/: optimized_tcp_server.cpp  tcp_client.cpp  tcp_server.cpp  udp_client.cpp  udp_server.cpp
network-programming-course/module-03-advanced-io/: README.md
network-programming-course/module-03-advanced-io/examples/: epoll_server.cpp
network-programming-course/module-04-high-performance/: README.md
network-programming-course/module-05-protocols/: README.md
network-programming-course/module-06-aws-networking/: README.md
network-programming-course/module-07-low-latency/: README.md
payment-system/: .env.example  .gitignore  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml
payment-system/.github/workflows/: ci-cd.yml
payment-system/api-gateway/: Dockerfile  main.py  requirements.txt
payment-system/deployments/kubernetes/: api-gateway-deployment.yml
payment-system/deployments/terraform/: main.tf  variables.tf
payment-system/docs/: DEPLOYMENT.md  architecture.md  class-diagram.md  sequence-diagrams.md
payment-system/infrastructure/prometheus/: prometheus.yml
payment-system/services/payment-gateway/: main.py  (+2 more)
payment-system/shared/: database.py  kafka_client.py  models.py  utils.py
python-interview-prep/: 01_arrays_strings.py  02_linked_lists.py  03_trees_bst.py  04_dynamic_programming.py  05_graphs.py  06_advanced_topics.py  07_design_patterns.py  08_system_design.md  INTERVIEW_GUIDE.md  README.md
(+30 files in other folders)
